[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
categories  = ["web-programming::http-client"]
description = "Reqwest effortless wrapper."
edition     = "2021"
homepage    = "https://hack.ink/reqwew"
keywords    = ["client", "http", "request", "reqwest"]
license     = "GPL-3.0"
name        = "reqwew"
readme      = "README.md"
repository  = "https://github.com/hack-ink/reqwew"
version     = "0.2.3"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[dependencies]
# crates.io
bytes      = { version = "1.6" }
once_cell  = { version = "1.19" }
reqwest    = { version = "0.12" }
serde      = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror  = { version = "1.0" }
tokio      = { version = "1.39" }
tracing    = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1.39", features = ["macros"] }
